--- a/roles/swag/templates/dns-conf/cloudflare.ini.j2
+++ b/roles/swag/templates/dns-conf/cloudflare.ini.j2
@@ -1,2 +1,1 @@
-dns_cloudflare_email = {{ cloudflare_email }}
-dns_cloudflare_api_key = {{ cloudflare_dns_api_key }}
+dns_cloudflare_api_token = {{ cloudflare_api_token }}
