--- a/roles/immich/templates/compose.yml.j2
+++ b/roles/immich/templates/compose.yml.j2
@@ -13,7 +13,6 @@ services:
     container_name: "{{ immich_container_name }}_server"
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
     user: "{{ guid }}:{{ guid }}"
-    command: ['start.sh', 'immich']
     networks:
       default:
         aliases:
@@ -28,33 +27,12 @@ services:
       - redis
       - database
     restart: always
+    healthcheck:
+      disable: false
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ immich_dashboard_name }}"
       swag.uptime-kuma.monitor.url: "{{ immich_dashboard_url }}"
-
-  immich-microservices:
-    container_name: immich_microservices
-    image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
-    user: "{{ guid }}:{{ guid }}"
-    # extends: # uncomment this section for hardware acceleration - see https://immich.app/docs/features/hardware-transcoding
-    #   file: hwaccel.transcoding.yml
-    #   service: cpu # set to one of [nvenc, quicksync, rkmpp, vaapi, vaapi-wsl] for accelerated transcoding
-    command: ['start.sh', 'microservices']
-    networks:
-      default:
-        aliases:
-          - immich-microservices
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${UPLOAD_LOCATION}:/usr/src/app/upload
-      - ${EXTERNAL_PATH}:/usr/src/app/external:ro
-    env_file:
-      - .env
-    depends_on:
-      - redis
-      - database
-    restart: always
 
   immich-machine-learning:
     container_name: immich_machine_learning
@@ -74,10 +52,14 @@ services:
     env_file:
       - .env
     restart: always
+    healthcheck:
+      disable: false
 
   redis:
     container_name: immich_redis
-    image: registry.hub.docker.com/library/redis:6.2-alpine@sha256:51d6c56749a4243096327e3fb964a48ed92254357108449cb6e23999c37773c5
+    image: docker.io/redis:6.2-alpine@sha256:2ba50e1ac3a0ea17b736ce9db2b0a9f6f8b85d4c27d5f5accc6a416d8f42c6d5
+    healthcheck:
+      test: redis-cli ping || exit 1
     restart: always
 
   database:
@@ -87,8 +69,29 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_DB: ${DB_DATABASE_NAME}
+      POSTGRES_INITDB_ARGS: '--data-checksums'
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: pg_isready --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' || exit 1; Chksum="$$(psql --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')"; echo "checksum failure count is $$Chksum"; [ "$$Chksum" = '0' ] || exit 1
+      interval: 5m
+      start_period: 5m
+    command:
+      [
+        'postgres',
+        '-c',
+        'shared_preload_libraries=vectors.so',
+        '-c',
+        'search_path="$$user", public, vectors',
+        '-c',
+        'logging_collector=on',
+        '-c',
+        'max_wal_size=2GB',
+        '-c',
+        'shared_buffers=512MB',
+        '-c',
+        'wal_compression=on',
+      ]
     restart: always
 
 networks:
