--- a/roles/nextcloud/templates/nextcloud.subdomain.conf.j2
+++ b/roles/nextcloud/templates/nextcloud.subdomain.conf.j2
@@ -55,7 +55,7 @@ server {
     location /{{ onlyoffice_subfolder }}/ {
         include /config/nginx/resolver.conf;
         proxy_http_version 1.1;
-        proxy_set_header X-Forwarded-Host $http_host/{{ onlyoffice_subfolder };
+        proxy_set_header X-Forwarded-Host $http_host/{{ onlyoffice_subfolder }};
         proxy_pass http://{{ nextcloud_onlyoffice_host }}/;
     }
 {% endif %}
