feat: big refactoring, with Debian 12 and snapraid-btrfs

--- a/roles/handbrake/templates/handbrake.subdomain.conf.j2
+++ b/roles/handbrake/templates/handbrake.subdomain.conf.j2
@@ -6,6 +6,8 @@ server {
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
+        add_header Access-Control-Allow-Origin *;
+
         set $upstream_app {{ handbrake_container_name }};
         set $upstream_port 5800;
         set $upstream_proto http;
