--- a/roles/deluge/templates/deluge.subdomain.conf.j2
+++ b/roles/deluge/templates/deluge.subdomain.conf.j2
@@ -7,6 +7,8 @@ server {
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
+        add_header Access-Control-Allow-Origin *;
+
         set $upstream_app {{ deluge_container_name }};
         set $upstream_port 8112;
         set $upstream_proto http;
