--- a/roles/immich/templates/compose.yml.j2
+++ b/roles/immich/templates/compose.yml.j2
@@ -29,6 +29,7 @@ services:
     restart: always
     healthcheck:
       disable: false
+      interval: 5m
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ immich_dashboard_name }}"
@@ -54,12 +55,14 @@ services:
     restart: always
     healthcheck:
       disable: false
+      interval: 5m
 
   redis:
     container_name: immich_redis
     image: docker.io/redis:6.2-alpine@sha256:2ba50e1ac3a0ea17b736ce9db2b0a9f6f8b85d4c27d5f5accc6a416d8f42c6d5
     healthcheck:
       test: redis-cli ping || exit 1
+      interval: 5m
     restart: always
 
   database:
@@ -75,7 +78,7 @@ services:
     healthcheck:
       test: pg_isready --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' || exit 1; Chksum="$$(psql --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')"; echo "checksum failure count is $$Chksum"; [ "$$Chksum" = '0' ] || exit 1
       interval: 5m
-      start_period: 5m
+      start_period: 1m
     command:
       [
         'postgres',
@@ -97,6 +100,7 @@ services:
 networks:
   default:
     name: "{{ immich_network_name }}"
+    external: true
 
 volumes:
   pgdata:
