--- a/roles/invidious/templates/invidious.subdomain.conf.j2
+++ b/roles/invidious/templates/invidious.subdomain.conf.j2
@@ -8,11 +8,16 @@ server {
     error_log /var/log/nginx/error.log crit;
 
     location / {
-        proxy_pass http://{{ invidious_container_name }}:3000;
+        add_header Access-Control-Allow-Origin *;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;    # so Invidious knows domain
         proxy_http_version 1.1;     # to keep alive
         proxy_set_header Connection ""; # to keep alive
+
+        set $upstream_app {{ invidious_container_name }};
+        set $upstream_port 3000;
+        set $upstream_proto http;
+        proxy_pass $upstream_proto://$upstream_app:$upstream_port;
     }
 
     if ($https = '') { return 301 https://$host$request_uri; }  # if not connected to HTTPS, perma-redirect to HTTPS
