--- a/roles/mergerfs/templates/mergerfs-uncache.j2
+++ b/roles/mergerfs/templates/mergerfs-uncache.j2
@@ -142,14 +142,17 @@ if __name__ == "__main__":
     syslog.syslog(syslog.LOG_INFO, "Processing candidates...")
     cache_used = cache_stats.used
     for c_id, (c_path, c_stat) in enumerate(candidates):
+        skip = False
         for excluded_path in excluded_paths:
             if f"{c_path}".startswith(excluded_path):
                 syslog.syslog(
                     syslog.LOG_DEBUG,
                     f"Skipping {c_path} since it is excluded by {excluded_path}.",
                 )
-                continue
-
+                skip = True
+                break
+        if skip:
+            continue
         syslog.syslog(syslog.LOG_DEBUG, f"{c_path}")
 
         if not c_path.exists():
