--- a/roles/seafile/templates/seafile.subdomain.conf.j2
+++ b/roles/seafile/templates/seafile.subdomain.conf.j2
@@ -5,6 +5,24 @@
 #     SEAFILE_SERVER_HOSTNAME=seafile.yourdomain.com
 # Restart or create the seafile container after enabling this subdomain and restarting the letsencrypt contianer
 
+{% if 'onlyoffice' in containers %}
+# Required for only office document server
+map $http_x_forwarded_proto $the_scheme {
+        default $http_x_forwarded_proto;
+        "" $scheme;
+    }
+
+map $http_x_forwarded_host $the_host {
+        default $http_x_forwarded_host;
+        "" $host;
+    }
+
+map $http_upgrade $proxy_connection {
+        default upgrade;
+        "" close;
+    }
+{% endif %}
+
 server {
 {% include "roles/swag/templates/nginx/common.j2" %}
 
@@ -13,9 +31,33 @@ server {
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app seafile;
-        set $upstream_port 8000;
+        set $upstream_app seafile-caddy;
+        set $upstream_port 80;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
     }
+
+    {% if 'onlyoffice' in containers %}
+    location /onlyofficeds/ {
+
+        # THIS ONE IS IMPORTANT ! - Trailing slash !
+        set $upstream_app onlyoffice;
+        set $upstream_port 80;
+        set $upstream_proto http;
+        proxy_pass $upstream_proto://$upstream_app:$upstream_port/;
+
+        proxy_http_version 1.1;
+        client_max_body_size 100M; # Limit Document size to 100MB
+        proxy_read_timeout 3600s;
+        proxy_connect_timeout 3600s;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $proxy_connection;
+
+        # THIS ONE IS IMPORTANT ! - Subfolder and NO trailing slash !
+        proxy_set_header X-Forwarded-Host $the_host/onlyofficeds;
+
+        proxy_set_header X-Forwarded-Proto $the_scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+    {% endif %}
 }
