--- a/roles/stirling_pdf/templates/stirling-pdf.subdomain.conf.j2
+++ b/roles/stirling_pdf/templates/stirling-pdf.subdomain.conf.j2
@@ -7,6 +7,8 @@ server {
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
+        add_header Access-Control-Allow-Origin *;
+
         set $upstream_app {{ stirling_pdf_container_name }};
         set $upstream_port 8080;
         set $upstream_proto http;
