feat: big refactoring, with Debian 12 and snapraid-btrfs

--- a/roles/immich/templates/.env.j2
+++ b/roles/immich/templates/.env.j2
@@ -3,8 +3,14 @@
 # The location where your uploaded files are stored
 UPLOAD_LOCATION="{{ mergerfs_root }}/docker-volumes-cache/immich/upload/"
 
+# The location where your database files are stored
+DB_DATA_LOCATION="{{ docker_dir }}/{{ immich_container_name }}/postgres"
+
 # Path to the existing library
 EXTERNAL_PATH="{{ mergerfs_root }}/Pictures/sara/PC-pers-immagini/01.Fotografie"
+
+# To set a timezone, uncomment the next line and change Etc/UTC to a TZ identifier from this list: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
+TZ={{ timezone }}
 
 # The Immich version to use. You can pin this to a specific version like "v1.71.0"
 IMMICH_VERSION=release
@@ -13,9 +19,6 @@ MACHINE_LEARNING_WORKERS=1
 
 # Connection secret for postgres. You should change it to a random password
 DB_PASSWORD="{{ mysql_password }}"
-
-# Others
-TZ="{{ timezone }}"
 
 # The values below this line do not need to be changed
 ###################################################################################
