--- a/roles/dawarich/templates/compose.yml.j2
+++ b/roles/dawarich/templates/compose.yml.j2
@@ -1,6 +1,6 @@
 networks:
   dawarich_network:
-    name: {{ dawarich_network_name }}
+    name: "{{ dawarich_network_name }}"
     external: true
 
 services:
@@ -22,6 +22,7 @@ services:
 
   dawarich_db:
     image: postgres:14.2-alpine
+    shm_size: 1G
     container_name: dawarich_db
     volumes:
       - db_data:/var/lib/postgresql/data
@@ -43,7 +44,6 @@ services:
     image: freikin/dawarich:latest
     container_name: dawarich_app
     volumes:
-      - gem_cache_app:/usr/local/bundle/gems_app
       - public:/var/app/public
       - watched:/var/app/tmp/imports/watched
     networks:
@@ -52,8 +52,8 @@ services:
       - 3000
     stdin_open: true
     tty: true
-    entrypoint: dev-entrypoint.sh
-    command: ['bin/dev']
+    entrypoint: web-entrypoint.sh
+    command: ['bin/rails', 'server', '-p', '3000', '-b', '::']
     restart: unless-stopped
     environment:
       RAILS_ENV: development
@@ -63,7 +63,6 @@ services:
       DATABASE_PASSWORD: "{{ dawarich_postgres_password }}"
       DATABASE_NAME: dawarich_database
       MIN_MINUTES_SPENT_IN_CITY: 60
-      APPLICATION_HOST: "{{ dawarich_subdomain }}.{{ site_url }}"
       APPLICATION_HOSTS: "{{ dawarich_subdomain }}.{{ site_url }},127.0.0.1"
       TIME_ZONE: "{{ timezone }}"
       APPLICATION_PROTOCOL: http
@@ -71,6 +70,7 @@ services:
       REVERSE_GEOCODING_ENABLED: true
       PHOTON_API_HOST: photon.komoot.io
       PHOTON_API_USE_HTTPS: true
+      ENABLE_TELEMETRY: false
     logging:
       driver: "json-file"
       options:
@@ -93,19 +93,23 @@ services:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ dawarich_dashboard_name }}"
       swag.uptime-kuma.monitor.url: "{{ dawarich_dashboard_url }}"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.50"
+          memory: "4G"
 
   dawarich_sidekiq:
     image: freikin/dawarich:latest
     container_name: dawarich_sidekiq
     volumes:
-      - gem_cache_sidekiq:/usr/local/bundle/gems_sidekiq
       - public:/var/app/public
       - watched:/var/app/tmp/imports/watched
     networks:
       - dawarich_network
     stdin_open: true
     tty: true
-    entrypoint: dev-entrypoint.sh
+    entrypoint: sidekiq-entrypoint.sh
     command: ['sidekiq']
     restart: unless-stopped
     environment:
@@ -115,7 +119,6 @@ services:
       DATABASE_USERNAME: "{{ dawarich_postgres_username }}"
       DATABASE_PASSWORD: "{{ dawarich_postgres_password }}"
       DATABASE_NAME: dawarich_database
-      APPLICATION_HOST: "{{ dawarich_subdomain }}.{{ site_url }}"
       APPLICATION_HOSTS: "{{ dawarich_subdomain }}.{{ site_url }},127.0.0.1"
       BACKGROUND_PROCESSING_CONCURRENCY: 10
       APPLICATION_PROTOCOL: http
@@ -144,9 +147,14 @@ services:
       dawarich_app:
         condition: service_healthy
         restart: true
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'    # Limit CPU usage to 50% of one core
+          memory: '4G'    # Limit memory usage to 4GB
 
 volumes:
-{% for item in ['db_data', 'gem_cache_app', 'gem_cache_sidekiq', 'shared_data', 'public', 'watched'] %}
+{% for item in ['db_data', 'shared_data', 'public', 'watched'] %}
   {{ item }}:
     driver: local
     driver_opts:
