--- a/roles/immich/templates/compose.yml.j2
+++ b/roles/immich/templates/compose.yml.j2
@@ -6,17 +6,22 @@
 # The compose file on main may not be compatible with the latest release.
 #
 
-name: immich
+name: "{{ immich_container_name }}"
+
+networks:
+  immich_network:
+    name: "{{ immich_network_name }}"
+    external: true
 
 services:
   immich-server:
-    container_name: "{{ immich_container_name }}_server"
+    container_name: "{{ immich_container_name }}-server"
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
     user: "{{ guid }}:{{ guid }}"
     networks:
-      default:
+      "{{ immich_network_name }}":
         aliases:
-          - immich-server
+          - immich_server
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
@@ -26,7 +31,7 @@ services:
     depends_on:
       - redis
       - database
-    restart: always
+    restart: unless-stopped
     healthcheck:
       disable: false
       interval: 5m
@@ -36,7 +41,7 @@ services:
       swag.uptime-kuma.monitor.url: "{{ immich_dashboard_url }}"
 
   immich-machine-learning:
-    container_name: immich_machine_learning
+    container_name: "{{ immich_container_name }}-machine-learning"
     # For hardware acceleration, add one of -[armnn, cuda, openvino] to the image tag.
     # Example tag: ${IMMICH_VERSION:-release}-cuda
     image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION:-release}-openvino
@@ -45,71 +50,65 @@ services:
       file: hwaccel.ml.yml
       service: openvino  # set to one of [armnn, cuda, openvino, openvino-wsl] for accelerated inference - use the `-wsl` version for WSL2 where applicable
     networks:
-      default:
+      "{{ immich_network_name }}":
         aliases:
-          - immich-machine-learning
+          - immich_machine_learning
     volumes:
       - model-cache:/cache
     env_file:
       - .env
-    restart: always
+    restart: unless-stopped
     healthcheck:
       disable: false
       interval: 5m
 
   redis:
-    container_name: immich_redis
-    image: docker.io/redis:6.2-alpine@sha256:2ba50e1ac3a0ea17b736ce9db2b0a9f6f8b85d4c27d5f5accc6a416d8f42c6d5
+    container_name: "{{ immich_container_name }}-redis"
+    image: docker.io/redis:6.2-alpine@sha256:eaba718fecd1196d88533de7ba49bf903ad33664a92debb24660a922ecd9cac8
+    networks:
+      "{{ immich_network_name }}":
+        aliases:
+          - immich_redis
     healthcheck:
       test: redis-cli ping || exit 1
       interval: 5m
-    restart: always
+    restart: unless-stopped
 
   database:
-    container_name: immich_postgres
-    image: registry.hub.docker.com/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
+    container_name: "{{ immich_container_name }}-postgres"
+    image: docker.io/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
+    networks:
+      "{{ immich_network_name }}":
+        aliases:
+          - immich_postgres
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_DB: ${DB_DATABASE_NAME}
       POSTGRES_INITDB_ARGS: '--data-checksums'
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ${DB_DATA_LOCATION}:/var/lib/postgresql/data
     healthcheck:
-      test: pg_isready --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' || exit 1; Chksum="$$(psql --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')"; echo "checksum failure count is $$Chksum"; [ "$$Chksum" = '0' ] || exit 1
+      test: >-
+        pg_isready --dbname="$${POSTGRES_DB}" --username="$${POSTGRES_USER}" || exit 1;
+        Chksum="$$(psql --dbname="$${POSTGRES_DB}" --username="$${POSTGRES_USER}" --tuples-only --no-align
+        --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')";
+        echo "checksum failure count is $$Chksum";
+        [ "$$Chksum" = '0' ] || exit 1
       interval: 5m
-      start_period: 1m
-    command:
-      [
-        'postgres',
-        '-c',
-        'shared_preload_libraries=vectors.so',
-        '-c',
-        'search_path="$$user", public, vectors',
-        '-c',
-        'logging_collector=on',
-        '-c',
-        'max_wal_size=2GB',
-        '-c',
-        'shared_buffers=512MB',
-        '-c',
-        'wal_compression=on',
-      ]
-    restart: always
-
-networks:
-  default:
-    name: "{{ immich_network_name }}"
-    external: true
+      start_interval: 30s
+      start_period: 5m
+    command: >-
+      postgres
+      -c shared_preload_libraries=vectors.so
+      -c 'search_path="$$user", public, vectors'
+      -c logging_collector=on
+      -c max_wal_size=2GB
+      -c shared_buffers=512MB
+      -c wal_compression=on
+    restart: unless-stopped
 
 volumes:
-  pgdata:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: "{{ docker_dir }}/immich/postgres"
-
   model-cache:
     driver: local
     driver_opts:
