--- a/roles/onlyoffice/templates/onlyoffice.subdomain.conf.j2
+++ b/roles/onlyoffice/templates/onlyoffice.subdomain.conf.j2
@@ -14,4 +14,9 @@ server {
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
     }
+
+    # Hide sensitive information from the welcome page
+    location /welcome {
+        return 403;
+    }
 }
