--- a/roles/swag/templates/nginx/proxy-confs/whoami.subdomain.conf.j2
+++ b/roles/swag/templates/nginx/proxy-confs/whoami.subdomain.conf.j2
@@ -3,9 +3,20 @@ server {
 
     server_name whoami.*;
 
+{% if "authelia" in containers %}
+    # enable for Authelia (requires authelia-location.conf in the location block)
+    include /config/nginx/authelia-server.conf;
+{% endif %}
+
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
+
+{% if "authelia" in containers %}
+        # enable for Authelia (requires authelia-server.conf in the server block)
+        include /config/nginx/authelia-location.conf;
+{% endif %}
+
         set $upstream_app whoami;
         set $upstream_port 80;
         set $upstream_proto http;
