--- a/roles/invidious/templates/invidious.subdomain.conf.j2
+++ b/roles/invidious/templates/invidious.subdomain.conf.j2
@@ -20,5 +20,29 @@ server {
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
     }
 
+    location /latest_version {
+        proxy_pass http://{{ invidious_container_name }}:8282;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;    # so Invidious companion knows domain
+        proxy_http_version 1.1;     # to keep alive
+        proxy_set_header Connection ""; # to keep alive
+    }
+
+    location /api/manifest/dash/id/ {
+        proxy_pass http://{{ invidious_container_name }}:8282;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;    # so Invidious companion knows domain
+        proxy_http_version 1.1;     # to keep alive
+        proxy_set_header Connection ""; # to keep alive
+    }
+
+    location /videoplayback {
+        proxy_pass http://{{ invidious_container_name }}:8282;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;    # so Invidious companion knows domain
+        proxy_http_version 1.1;     # to keep alive
+        proxy_set_header Connection ""; # to keep alive
+    }
+
     if ($https = '') { return 301 https://$host$request_uri; }  # if not connected to HTTPS, perma-redirect to HTTPS
 }
