--- a/roles/speedtest_tracker/templates/speedtest.subdomain.conf.j2
+++ b/roles/speedtest_tracker/templates/speedtest.subdomain.conf.j2
@@ -7,10 +7,18 @@ server {
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
+ff
+        # Remove upstream header to prevent duplication
+        proxy_hide_header Access-Control-Allow-Origin;
+
+        # Add clean, correct CORS header
+        add_header 'Access-Control-Allow-Origin' 'https://{{ site_url }}' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+
         set $upstream_app {{ speedtest_tracker_container_name }};
         set $upstream_port 80;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
-
     }
 }
