--- a/roles/dawarich/templates/compose.yml.j2
+++ b/roles/dawarich/templates/compose.yml.j2
@@ -4,6 +4,22 @@ networks:
     external: true
 
 services:
+  dawarich_redis:
+    image: redis:7.4-alpine
+    container_name: "{{ dawarich_container_name }}_redis"
+    command: redis-server
+    networks:
+      - dawarich_network
+    volumes:
+      - redis_data:/data
+    restart: always
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
+
   dawarich_db:
     image: postgis/postgis:17-3.5-alpine
     shm_size: 1G
@@ -19,14 +35,15 @@ services:
       POSTGRES_DB: dawarich_production
     restart: always
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U {{ dawarich_postgres_username }} -d dawarich_development" ]
+      test: [ "CMD-SHELL", "pg_isready -U {{ dawarich_postgres_username }} -d dawarich_production" ]
       interval: 10s
       retries: 5
       start_period: 30s
       timeout: 10s
 
+
   dawarich_app:
-    image: freikin/dawarich:latest
+    image: freikin/dawarich:0.30.7
     container_name: "{{ dawarich_container_name }}_app"
     volumes:
       - public:/var/app/public
@@ -43,22 +60,21 @@ services:
     command: ['bin/rails', 'server', '-p', '3000', '-b', '::']
     restart: unless-stopped
     environment:
-      RAILS_ENV: development
+      RAILS_ENV: production
+      REDIS_URL: redis://dawarich_redis:6379
       DATABASE_HOST: dawarich_db
+      DATABASE_PORT: 5432
       DATABASE_USERNAME: "{{ dawarich_postgres_username }}"
       DATABASE_PASSWORD: "{{ dawarich_postgres_password }}"
       DATABASE_NAME: dawarich_production
-      QUEUE_DATABASE_PATH: /dawarich_db_data/dawarich_development_queue.sqlite3
-      CACHE_DATABASE_PATH: /dawarich_db_data/dawarich_development_cache.sqlite3
-      CABLE_DATABASE_PATH: /dawarich_db_data/dawarich_development_cable.sqlite3
       MIN_MINUTES_SPENT_IN_CITY: 60
+      SECRET_KEY_BASE: "{{ dawarich_secret_key_base }}"
       APPLICATION_HOSTS: "{{ dawarich_subdomain }}.{{ site_url }},127.0.0.1"
       TIME_ZONE: "{{ timezone }}"
       APPLICATION_PROTOCOL: http
       DISTANCE_UNIT: km
       REVERSE_GEOCODING_ENABLED: true
-      PHOTON_API_HOST: photon.komoot.io
-      PHOTON_API_USE_HTTPS: true
+      STORE_GEODATA: true
       SELF_HOSTED: true
     logging:
       driver: "json-file"
@@ -75,6 +91,9 @@ services:
       dawarich_db:
         condition: service_healthy
         restart: true
+      dawarich_redis:
+        condition: service_healthy
+        restart: true
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ dawarich_dashboard_name }}"
@@ -85,8 +104,62 @@ services:
           cpus: "0.50"
           memory: "4G"
 
+  dawarich_sidekiq:
+    image: freikin/dawarich:0.30.7
+    container_name: dawarich_sidekiq
+    volumes:
+      - public:/var/app/public
+      - watched:/var/app/tmp/imports/watched
+      - storage:/var/app/storage
+    networks:
+      - dawarich_network
+    stdin_open: true
+    tty: true
+    entrypoint: sidekiq-entrypoint.sh
+    command: ['bundle', 'exec', 'sidekiq']
+    restart: on-failure
+    environment:
+      RAILS_ENV: production
+      REDIS_URL: redis://dawarich_redis:6379
+      DATABASE_HOST: dawarich_db
+      DATABASE_PORT: 5432
+      DATABASE_USERNAME: "{{ dawarich_postgres_username }}"
+      DATABASE_PASSWORD: "{{ dawarich_postgres_password }}"
+      DATABASE_NAME: dawarich_production
+      APPLICATION_HOSTS: localhost,::1,127.0.0.1
+      BACKGROUND_PROCESSING_CONCURRENCY: 10
+      APPLICATION_PROTOCOL: http
+      PROMETHEUS_EXPORTER_ENABLED: false
+      PROMETHEUS_EXPORTER_HOST: dawarich_app
+      PROMETHEUS_EXPORTER_PORT: 9394
+      SELF_HOSTED: true
+      SECRET_KEY_BASE: 1234567890
+      RAILS_LOG_TO_STDOUT: "true"
+      STORE_GEODATA: "true"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "5"
+    healthcheck:
+      test: [ "CMD-SHELL", "pgrep -f sidekiq" ]
+      interval: 10s
+      retries: 30
+      start_period: 30s
+      timeout: 10s
+    depends_on:
+      dawarich_db:
+        condition: service_healthy
+        restart: true
+      dawarich_redis:
+        condition: service_healthy
+        restart: true
+      dawarich_app:
+        condition: service_healthy
+        restart: true
+
 volumes:
-{% for item in ['shared_data', 'public', 'watched', 'db_data_pg_17', 'storage'] %}
+{% for item in ['shared_data', 'public', 'watched', 'db_data_pg_17', 'storage', 'redis_data'] %}
   {{ item }}:
     driver: local
     driver_opts:
