--- a/roles/invidious/templates/invidious.subdomain.conf.j2
+++ b/roles/invidious/templates/invidious.subdomain.conf.j2
@@ -21,7 +21,7 @@ server {
     }
 
     location /latest_version {
-        proxy_pass http://{{ invidious_container_name }}:8282;
+        proxy_pass http://{{ invidious_container_name }}-companion:8282;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;    # so Invidious companion knows domain
         proxy_http_version 1.1;     # to keep alive
@@ -29,7 +29,7 @@ server {
     }
 
     location /api/manifest/dash/id/ {
-        proxy_pass http://{{ invidious_container_name }}:8282;
+        proxy_pass http://{{ invidious_container_name }}-companion:8282;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;    # so Invidious companion knows domain
         proxy_http_version 1.1;     # to keep alive
@@ -37,7 +37,7 @@ server {
     }
 
     location /videoplayback {
-        proxy_pass http://{{ invidious_container_name }}:8282;
+        proxy_pass http://{{ invidious_container_name }}-companion:8282;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;    # so Invidious companion knows domain
         proxy_http_version 1.1;     # to keep alive
