--- a/roles/redlib/templates/redlib.subdomain.conf.j2
+++ b/roles/redlib/templates/redlib.subdomain.conf.j2
@@ -1,15 +1,16 @@
-## Version 2024/07/16
 server {
     {% include "roles/swag/templates/nginx/common.j2" %}
 
-    server_name {{ firefox_subdomain }}.*;
+    server_name {{ redlib_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app {{ firefox_container_name }};
-        set $upstream_port 3001;
-        set $upstream_proto https;
+        add_header Access-Control-Allow-Origin 'https://{{ site_url }}' always;
+
+        set $upstream_app {{ redlib_container_name }};
+        set $upstream_port 8080;
+        set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
     }
 }
