--- a/roles/telegraf/templates/telegraf.j2
+++ b/roles/telegraf/templates/telegraf.j2
@@ -4,4 +4,5 @@ INFLUX_ORG="{{ influxdb_org }}"
 INFLUX_BUCKET="{{ influxdb_bucket }}"
 UPSD_USERNAME="{{ nut_monitor_username }}"
 UPSD_PASSWORD="{{ nut_monitor_password }}"
+MQTT_PASSWORD="{{ telegraf_mqtt_password }}"
 MQTT_TOPIC="tele/{{ hostname }}/SENSOR"
